--- a/Week1/assets/index.html
+++ b/Week1/assets/index.html
@@ -68,9 +68,11 @@
             <p class="card-text" id="card-updated"></p>
           </div>
         </div>
-        <ul class="list-group" id="list">
-
-        </ul>
+        <div
+          class="card border-success mb-4">
+        <div class="card-header">Contributors</div>
+        <ul class="list-group" id="list"></ul>
+        </div>
       </div>
     </div>
   </body>
