--- a/Week1/assets/index.html
+++ b/Week1/assets/index.html
@@ -55,7 +55,7 @@
       <div class="row">
         <div
           class="card border-success mb-4"
-          style="max-width: 20rem;"
+          style="max-width: 20rem; max-height: 20em;"
         >
           <div class="card-header">Github Repo Information</div>
           <div class="card-body">
@@ -69,12 +69,16 @@
           </div>
         </div>
         <div
-          class="card border-success mb-4">
+          class="card border-success mb-4" style="width: 30em; margin-left: 1em;">
         <div class="card-header">Contributors</div>
         <ul class="list-group" id="list"></ul>
         </div>
       </div>
+      
     </div>
+    <footer align="center">
+      Designed by Farhan Nazir
+    </footer> 
   </body>
   <script src="app.js"></script>
 </html>
